@@ -59,13 +59,19 @@ sub story : Callback {
 
     my (@field, @crit);
 
-    _build_fields($self, \@field, \@crit,
-                    [qw(simple title primary_uri category_uri keyword
-                        data_text subelement_key_name)]);
-    _build_id_fields($self, \@field, \@crit, [qw(element_type_id site_id)]);
+    _build_fields(
+        $self, \@field, \@crit,
+        [qw(simple title primary_uri category_uri keyword data_text)],
+    );
+    _build_id_fields(
+        $self, \@field, \@crit,
+        [qw(element_type_id site_id subelement_id)],
+    );
     _build_bool_fields($self, \@field, \@crit, [qw(active)]);
-    _build_date_fields($self->class_key, $self->params, \@field, \@crit,
-		       [qw(cover_date publish_date expire_date)]);
+    _build_date_fields(
+        $self->class_key, $self->params, \@field, \@crit,
+        [qw(cover_date publish_date expire_date)],
+    );
 
     # Display no results for an empty search.
     return unless @field;
