@@ -12,6 +12,17 @@ This document lists the Changes to Bricolage introduced with each release.
 
 =head1 VERSION 1.10.2 ()
 
+=head2 Improvements
+
+=over
+
+=item *
+
+Added the C<subelement_id> parameter to the story and media C<list()> methods.
+[David]
+
+=back
+
 =head2 Bug Fixes
 
 =over
